fix date spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -6,8 +6,6 @@
 
 @import "~bulma/sass/utilities/initial-variables"
 
-// Config vars
-// Kalidi logo brand color: #FD461E
 
 $kaldi-red: #333300
 $kaldi-red-invert: #fff
@@ -128,12 +126,15 @@ h1 h2 h3 h4
   letter-spacing: 3px;
 
 #index
-  max-width: 25%;
+  max-width: 28%;
   height: auto;
   position: fixed;
   z-index: -1;
   right: 4vw;
   bottom: 4vh;
 
+#postContainer
+  width: 80%
 
-
+#dates
+  margin-bottom: 5vh;
